fixes github avatar size : text size : alignment

--- a/themes/nav-community-v1/static/css/contrib-list.scss
+++ b/themes/nav-community-v1/static/css/contrib-list.scss
@@ -4,7 +4,7 @@
   }
 
   .git-disp-pic {
-    height: 88px;
+    height: 48px;
     border-radius: 225px;
     margin: 13px 15px 8px 5px;
   }
@@ -15,14 +15,14 @@
     border-radius: 10px;
     box-shadow: #ccc 0px 0px 10px;
     .name {
-      font-size: 24px;
+      font-size: 20px;
     }
     .contrib-number {
       font-size: 43px;
       margin-top: 5px;
     }
     .contrib-info {
-      margin-top: 30px;
+      margin-top: 10px;
       margin-left: 5px;
     }
     .faded-text {
